# tasca-3

./: README.md  grafiques.ipynb  model_KNN.ipynb  model_SVM.ipynb  model_decision_trees.ipynb  model_regressio_logistica.ipynb  pyproject.toml  tasca3_Miguel_Angel_Vilchez.odt
models/: decision_tree.pck  knn.pck  regressio_logistica.pck  svm.pck
tasca_3/: tasca_app.py
templates/: index.html  result.html
tests/: mostra_grafiques.ipynb  prova_DataFrames.ipynb
