[tool.poetry]
name = "tasca-3"
version = "0.1.0"
description = ""
authors = ["Miguel Ángel Vílchez López <mangel@matronica.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
flask = "^3.0.0"
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
